--- a/raffiac/airconapp/templates/airconapp/acservicecalc_list.html
+++ b/raffiac/airconapp/templates/airconapp/acservicecalc_list.html
@@ -23,7 +23,7 @@
         </tr>
       {% empty %}
         <tr>
-          <td colspan="4">No person in the database. <a href="{% url 'calc_add' %}">Add the first person</a>.</td>
+          <td colspan="4">No calculations in the database. <a href="{% url 'calc_add' %}">Add the first calculation</a>.</td>
         </tr>
       {% endfor %}
     </tbody>
